<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_username"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        app:layout_constraintStart_toEndOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_fullname"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_username"/>

    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_3_followers"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_7_followings"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/tv_followers"
        app:layout_constraintBottom_toBottomOf="@id/tv_followers"
        app:layout_constraintStart_toEndOf="@id/tv_followers" />

    <TextView
        android:id="@+id/tv_twitter_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_username_on_twitter"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_followers"
        />

    <TextView
        android:id="@+id/tv_public_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_8_public_repo"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_public_gists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_2_public_gists"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/tv_public_repo"
        app:layout_constraintBottom_toBottomOf="@id/tv_public_repo"
        app:layout_constraintStart_toEndOf="@id/tv_public_repo" />

    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_bio"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:maxLines="3"
        app:layout_constraintTop_toBottomOf="@id/tv_public_repo"
        app:layout_constraintStart_toStartOf="@id/tv_public_repo" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_working_at_company_xyz"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:maxLines="3"
        app:layout_constraintTop_toBottomOf="@id/tv_bio"
        app:layout_constraintStart_toStartOf="@id/tv_bio" />

    <TextView
        android:id="@+id/tv_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_www_blog_com"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:maxLines="3"
        app:layout_constraintTop_toBottomOf="@id/tv_company"
        app:layout_constraintStart_toStartOf="@id/tv_company" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_indonesia"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:maxLines="3"
        app:layout_constraintTop_toBottomOf="@id/tv_blog"
        app:layout_constraintStart_toStartOf="@id/tv_blog" />

</androidx.constraintlayout.widget.ConstraintLayout>